--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, sans-serif;
+  width: 100%;
+  letter-spacing: -.02em;
+}
+
+:root{
+  --p: #1a202c;
+  --s: #e2e8f0;
+  --t: #ffffff;
+}
+
+a {
+  text-decoration: none;
+  color: #1a202c;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App,
+.Blog {
+  color: #1a202c;
+  margin-top: 80px;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header {
+  width: 100%;
+  margin-bottom: 30px;
+  justify-content: space-between;
+}
+
+header,
+header label {
+  display: flex;
+  align-items: center;
+}
+
+header label {
+  cursor: pointer;
+  font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-weight: 800;
+  font-size: 2.25em;
+}
+
+header label:hover {
+  color: #2f3541;
+}
+
+header .blog {
+  transition: 0.1s;
+  cursor: pointer;
+}
+
+hr {
+  margin: 2em 0;
+  border: 0 solid #e2e8f0;
+  border-color: #e2e8f0;
+  border-top-width: 1px;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer ion-icon {
+  margin-right: 5px;
+}
+
+footer p {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+footer .twitter:hover {
+  color: rgb(42, 169, 224);
+}
+
+footer .github:hover {
+  color: rgb(129, 34, 144);
+}
+
+footer .instagram:hover {
+  color: rgb(253, 8, 72);
+}
+
+footer .linkedin:hover {
+  color: rgb(2, 117, 180);
 }
